test/mulberry/Language/const_parameter_syntax_error.mulberry
# RUN: not mulberry-driver -typecheck %s 2>&1 | FileCheck %s

fn id(const value: UInt64): UInt64 {
  return value;
}

# CHECK: error: function parameters are readonly by default; use `mut` for mutable parameters
